--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <section id="cabezera">
+      <section id="cabecera">
         <div class="c1">
           Comenzando con la fotografía
         </div>
@@ -30,19 +30,43 @@
         </figure>
       </section>
       <section id="imagen_secundaria">
-        <figure class="img1">
+        <figure id="img2">
           <a href="html/paisajes.html" target="_blank">
             <img src="img/imagen2.jpg" alt="atardecer" width="100%">
             <figcaption>Paisajes</figcaption>
           </a>
         </figure>
-        <figure class="img2">
+        <figure id="img3">
           <a href="html/retratos.html" target="_blank">
             <img src="img/imagen3.jpg" alt="cielo" width="100%">
             <figcaption>Retratos</figcaption>
           </a>
         </figure>
       </section>
+      <footer>
+        <section id="pie">
+          <div class="contacto">
+            <h1>Contacto</h1>
+            <a href="mailto:cmorice@loza.co.cr?subject=Contacto">cmorice@loza.co.cr</a>
+            <p>La Ribera de Belén</p>
+            <p>+506 8723-7145</p>
+          </div>
+          <div class="terminos">
+            <h1>Términos</h1>
+            <p>Conoce nuestros términos y condiciones…</p>
+          </div>
+          <div class="redes_sociales">
+            <h1>Redes Sociales</h1>
+            <a href="http://facebook.com"><img src="./Iconos/facebook.svg" alt="Facebook" width="30" height="30">Comenzando con la fotografía</a>
+            <a href="http://twitter.com"><img src="./Iconos/twitter.svg" alt="Twitter" width="30" height="30">Comenzando con la fotografía</a>
+            <a href="http://google.com"><img src="./Iconos/google-plus.svg" alt="Google" width="30" height="30">Comenzando con la fotografía</a>
+          </div>
+          <div class="derechos">
+            <h1>Derechos</h1>
+            <p>® Copiright Carlos Morice - 2018</p>
+          </div>
+        </section>
+      </footer>
 
   </body>
 </html>
