--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
           </div>
           <div class="redes_sociales">
             <h1>Redes Sociales</h1>
-            <a href="http://facebook.com"><img src="./Iconos/facebook.svg" alt="Facebook" width="30" height="30">Comenzando con la fotografía</a>
-            <a href="http://twitter.com"><img src="./Iconos/twitter.svg" alt="Twitter" width="30" height="30">Comenzando con la fotografía</a>
-            <a href="http://google.com"><img src="./Iconos/google-plus.svg" alt="Google" width="30" height="30">Comenzando con la fotografía</a>
+            <p><a href="http://facebook.com"><img src="./Iconos/facebook.svg" alt="Facebook"> Comenzando con la fotografía</a></p>
+            <p><a href="http://twitter.com"><img src="./Iconos/twitter.svg" alt="Twitter"> Comenzando con la fotografía</a></p>
+            <p><a href="http://google.com"><img src="./Iconos/google-plus.svg" alt="Google"> Comenzando con la fotografía</a></p>
           </div>
           <div class="derechos">
             <h1>Derechos</h1>
