--- a/index.html
+++ b/index.html
@@ -8,37 +8,44 @@
     <title>Comenzando con la fotografía</title>
   </head>
   <body>
-    <header>
-      <section id="cabecera">
-        <div class="c1">
+    <div id="contenido">
+      <header>
+        <section id="cabecera">
+          <div class="c1">
           Comenzando con la fotografía
-        </div>
-        <div class="c2">
-          <a href="index.html" target="_blank"> Inicio</a>
-        </div>
-        <div class="c3">
-          <a href="html/paisajes.html" target="_blank"> Paisajes</a>
-        </div>
-        <div class="c4">
-          <a href="html/retratos.html" target="_blank"> Retratos</a>
-        </div>
-      </section>
-    </header>
+          </div>
+          <div class="c2">
+            <a class="actual" href="index.html" target="_blank">
+              Inicio
+            </a>
+          </div>
+          <div class="c3">
+            <a href="html/paisajes.html" target="_blank">
+              Paisajes
+            </a>
+          </div>
+          <div class="c4">
+            <a href="html/retratos.html" target="_blank">
+              Retratos
+            </a>
+          </div>
+        </section>
+      </header>
       <section id="imagen_principal">
         <figure>
-          <img src="img/imagen1.jpg" alt="árbol" width="100%">
+          <img src="img/imagen1.jpg" alt="árbol">
         </figure>
       </section>
       <section id="imagen_secundaria">
         <figure id="img2">
           <a href="html/paisajes.html" target="_blank">
-            <img src="img/imagen2.jpg" alt="atardecer" width="100%">
+            <img src="img/imagen2.jpg" alt="atardecer">
             <figcaption>Paisajes</figcaption>
           </a>
         </figure>
         <figure id="img3">
           <a href="html/retratos.html" target="_blank">
-            <img src="img/imagen3.jpg" alt="cielo" width="100%">
+            <img src="img/imagen3.jpg" alt="cielo">
             <figcaption>Retratos</figcaption>
           </a>
         </figure>
@@ -63,10 +70,11 @@
           </div>
           <div class="derechos">
             <h1>Derechos</h1>
-            <p>® Copiright Carlos Morice - 2018</p>
+            <p>Carlos Morice</p>
+            <p>® Copiright - 2018</p>
           </div>
         </section>
       </footer>
-
+    </div>
   </body>
 </html>
