--- a/paisajes.html
+++ b/paisajes.html
@@ -12,7 +12,7 @@
       <header>
         <section id="cabecera">
           <div class="c1">
-          Comenzando con la fotografía
+          Comenzando con los Paisajes
           </div>
           <div class="c2">
             <a href="../index.html" target="_blank">
@@ -76,9 +76,9 @@
           </div>
           <div class="redes_sociales">
             <h1>Redes Sociales</h1>
-            <p><a href="http://facebook.com"><img src="../Iconos/facebook.svg" alt="Facebook"> Comenzando con la fotografía</a></p>
-            <p><a href="http://twitter.com"><img src="../Iconos/twitter.svg" alt="Twitter"> Comenzando con la fotografía</a></p>
-            <p><a href="http://google.com"><img src="../Iconos/google-plus.svg" alt="Google"> Comenzando con la fotografía</a></p>
+            <p><a href="http://facebook.com"><img src="../iconos/facebook.svg" alt="Facebook"></a> Comenzando con la Fotografía</p>
+            <p><a href="http://twitter.com"><img src="../iconos/twitter.svg" alt="Twitter"></a> Comenzando con la Fotografía</p>
+            <p><a href="http://google.com"><img src="../iconos/google-plus.svg" alt="Google"></a> Comenzando con la Fotografía</p>
           </div>
           <div class="derechos">
             <h1>Derechos</h1>
